force-app/main/default/objects/Mass_Email_Log_Item__c/Mass_Email_Log_Item__c.object-meta.xml
<CustomObject>
    <label>Mass Email Log Item</label>
    <nameField>
        <displayFormat>MELI-{0000}</displayFormat>
        <label>Mass Email Log Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Email Log Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>