force-app/main/default/objects/Mass_Email_Log_Item__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mass Email Log Items</relationshipLabel>
    <relationshipName>Mass_Email_Log_Items</relationshipName>
    <type>Lookup</type>
</CustomField>