force-app/main/default/objects/Mass_Email_Log_Item__c/fields/Mass_Email_Log__c.field-meta.xml
<CustomField>
    <fullName>Mass_Email_Log__c</fullName>
    <label>Mass Email Log</label>
    <referenceTo>Mass_Email_Log__c</referenceTo>
    <relationshipLabel>Log Items</relationshipLabel>
    <relationshipName>Mass_Email_Log_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>